# bitbucket-cli

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md
packaging/chocolatey/: README.md  bb.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/deb/: README.md
packaging/homebrew/: bb.rb  update-formula.sh
src/: lib.rs  main.rs
src/alias/: mod.rs
src/api/: client.rs  mod.rs
src/api/cloud/: issues.rs  mod.rs  pipelines.rs  pullrequests.rs  repositories.rs  workspaces.rs
src/api/common/: mod.rs  pagination.rs
src/api/server/: mod.rs  projects.rs  pullrequests.rs  repositories.rs
src/auth/: keyring.rs  mod.rs  oauth.rs  profile.rs  token.rs
src/cli/: alias.rs  api.rs  artifact.rs  auth.rs  browse.rs  completion.rs  config.rs  deploy.rs  extension.rs  issue.rs  mod.rs  pipeline.rs  pr.rs  project.rs  repo.rs  secret.rs  ssh_key.rs  webhook.rs  workspace.rs
src/config/: file.rs  hosts.rs  mod.rs
src/context/: git.rs  mod.rs  resolver.rs
src/extension/: mod.rs
src/interactive/: mod.rs  prompt.rs  selector.rs
src/output/: json.rs  markdown.rs  mod.rs  table.rs
src/util/: mod.rs
