[package]
name = "bitbucket-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ngonidzashe Mangudya <ngmangudya@gmail.com>"]
description = "A command-line interface for Bitbucket Cloud and Server/Data Center"
license = "MIT"
repository = "https://github.com/iamngoni/bitbucket-cli"
keywords = ["bitbucket", "cli", "git", "vcs", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "string"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client (use rustls instead of native-tls for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2", "charset", "macos-system-configuration"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Secure credential storage
keyring = "3.6"

# Git operations (use vendored OpenSSL for cross-compilation)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Terminal UI
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
comfy-table = "7.1"

# Configuration
toml = "0.8"
directories = "5.0"

# URL parsing
url = "2.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# OAuth (we implement our own flow with PKCE)

# Markdown rendering
termimad = "0.30"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Base64 encoding (for Basic auth)
base64 = "0.22"

# Open browser
webbrowser = "1.0"

# Random number generation (for PKCE)
rand = "0.9"

# SHA-256 hashing (for PKCE)
sha2 = "0.10"

# Regex for parsing
regex = "1.11"

# Lazy initialization
once_cell = "1.20"

# Shell argument parsing
shell-words = "1.1"

[dev-dependencies]
mockito = "1.6"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Debian packaging configuration (for cargo-deb)
[package.metadata.deb]
maintainer = "Ngonidzashe Mangudya <ngmangudya@gmail.com>"
copyright = "2025, Ngonidzashe Mangudya"
license-file = ["LICENSE", "0"]
extended-description = """\
bb is a powerful command-line interface for Bitbucket that brings \
repository management, pull requests, pipelines, and team collaboration \
directly to the terminal. It supports both Bitbucket Cloud and \
Bitbucket Server/Data Center with a unified command interface."""
depends = "$auto"
section = "devel"
priority = "optional"
assets = [
    ["target/release/bb", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bb/README", "644"],
]
